--- a/Boltzmann/analysis.ipynb
+++ b/Boltzmann/analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,11 +33,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
     "BOLTZMANN_DIR = Path(__name__).parent"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_boltzmann = np.loadtxt(\n",
+    "    BOLTZMANN_DIR / \"results.csv\", delimiter=\",\", skiprows=1, unpack=True\n",
+    ")\n",
+    "voltage_data = data_boltzmann[4] / 1000"
    ]
   },
   {
@@ -49,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,13 +94,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_boltzmann = np.loadtxt(\n",
-    "    BOLTZMANN_DIR / \"results.csv\", delimiter=\",\", skiprows=1, unpack=True\n",
-    ")\n",
     "boltzmann_resistance = np.array(\n",
     "    [\n",
     "        get_resistance(data_boltzmann[0], data_boltzmann[2]),  # Multimeter\n",
@@ -113,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +133,7 @@
     ") -> float:\n",
     "    delta_R = resistance_interval[1] - resistance_interval[0]\n",
     "    delta_T = temperature_interval[1] - temperature_interval[0]\n",
-    "    return resistance_interval[0] + delta_T / delta_R * (\n",
+    "    return temperature_interval[0] + delta_T / delta_R * (\n",
     "        resistance - resistance_interval[0]\n",
     "    )\n",
     "\n",
@@ -132,10 +141,41 @@
     "def get_resistance_interval(\n",
     "    resistance: float, resistance_array: np.ndarray\n",
     ") -> tuple[int, int]:\n",
-    "    for i in resistance_array:\n",
-    "        if i <= resistance:\n",
-    "            return i, i + 1\n",
+    "    for index, i in enumerate(resistance_array):\n",
+    "        if i >= resistance:\n",
+    "            return index, index + 1\n",
     "    return 0, 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_temperature(\n",
+    "    R_rel: np.ndarray, reference_R: np.ndarray, reference_T: np.ndarray\n",
+    ") -> np.ndarray:\n",
+    "    temp_results = np.zeros_like(R_rel)\n",
+    "    for index, resistance in enumerate(R_rel):\n",
+    "        lower, upper = get_resistance_interval(resistance, reference_R)\n",
+    "        temp_results[index] = interpolate_temperature(\n",
+    "            resistance,\n",
+    "            (reference_R[lower], reference_R[upper]),\n",
+    "            (reference_T[lower], reference_T[upper]),\n",
+    "        )\n",
+    "    return temp_results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reference_resistance, reference_temperature, _ = np.loadtxt(\n",
+    "    BOLTZMANN_DIR / \"resistance_temperature_table.csv\", delimiter=\",\", skiprows=1, unpack=True\n",
+    ")"
    ]
   },
   {
@@ -147,68 +187,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.0 2.0\n"
-     ]
-    },
-    {
-     "ename": "IndexError",
-     "evalue": "only integers, slices (`:`), ellipsis (`...`), numpy.newaxis (`None`) and integer or boolean arrays are valid indices",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m/home/thorb/OneDrive/NTNU-OneDrive/Termisk-Fysikk/Lab/Termisk-stråling/Boltzmann/analysis.ipynb Cell 13\u001b[0m line \u001b[0;36m1\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/thorb/OneDrive/NTNU-OneDrive/Termisk-Fysikk/Lab/Termisk-str%C3%A5ling/Boltzmann/analysis.ipynb#X15sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m     lower, upper \u001b[39m=\u001b[39m get_resistance_interval(resistance, reference_resistance)\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/thorb/OneDrive/NTNU-OneDrive/Termisk-Fysikk/Lab/Termisk-str%C3%A5ling/Boltzmann/analysis.ipynb#X15sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m     \u001b[39mprint\u001b[39m(lower, upper)\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/thorb/OneDrive/NTNU-OneDrive/Termisk-Fysikk/Lab/Termisk-str%C3%A5ling/Boltzmann/analysis.ipynb#X15sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m     temperature_results[index] \u001b[39m=\u001b[39m interpolate_temperature(\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/thorb/OneDrive/NTNU-OneDrive/Termisk-Fysikk/Lab/Termisk-str%C3%A5ling/Boltzmann/analysis.ipynb#X15sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m         resistance,\n\u001b[0;32m---> <a href='vscode-notebook-cell:/home/thorb/OneDrive/NTNU-OneDrive/Termisk-Fysikk/Lab/Termisk-str%C3%A5ling/Boltzmann/analysis.ipynb#X15sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m         (reference_resistance[lower], reference_resistance[upper]),\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/thorb/OneDrive/NTNU-OneDrive/Termisk-Fysikk/Lab/Termisk-str%C3%A5ling/Boltzmann/analysis.ipynb#X15sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m         (temperature[lower], temperature[upper]),\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/thorb/OneDrive/NTNU-OneDrive/Termisk-Fysikk/Lab/Termisk-str%C3%A5ling/Boltzmann/analysis.ipynb#X15sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m     )\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/thorb/OneDrive/NTNU-OneDrive/Termisk-Fysikk/Lab/Termisk-str%C3%A5ling/Boltzmann/analysis.ipynb#X15sZmlsZQ%3D%3D?line=13'>14</a>\u001b[0m \u001b[39mprint\u001b[39m(temperature)\n",
-      "\u001b[0;31mIndexError\u001b[0m: only integers, slices (`:`), ellipsis (`...`), numpy.newaxis (`None`) and integer or boolean arrays are valid indices"
+      "4.404359187621584\n",
+      "0.029356787478218252\n"
      ]
     }
    ],
    "source": [
-    "reference_resistance, temperature, _ = np.loadtxt(\n",
-    "    BOLTZMANN_DIR / \"resistance_temperature_table.csv\", delimiter=\",\", skiprows=1, unpack=True\n",
-    ")\n",
+    "temperature_results = get_temperature(relative_resistance[0], reference_resistance, reference_temperature)\n",
     "\n",
-    "temperature_results = np.zeros_like(relative_resistance[0])\n",
-    "for index, resistance in enumerate(relative_resistance[0]):\n",
-    "    lower, upper = get_resistance_interval(resistance, reference_resistance)\n",
-    "    print(lower, upper)\n",
-    "    temperature_results[index] = interpolate_temperature(\n",
-    "        resistance,\n",
-    "        (reference_resistance[lower], reference_resistance[upper]),\n",
-    "        (temperature[lower], temperature[upper]),\n",
-    "    )\n",
-    "print(temperature)"
+    "res = linregress(np.log(temperature_results), np.log(voltage_data))\n",
+    "print(res.slope)\n",
+    "print(res.stderr)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Leslie-data"
+    "### Strømforsyning"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4.6289023383188335\n",
+      "0.03237785979632769\n"
+     ]
+    }
+   ],
    "source": [
-    "LESLIE_DIR = Path(__name__).parent / \"Leslie\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data_leslie = pd.read_csv(LESLIE_DIR / \"results.csv\")\n"
+    "temperature_results = get_temperature(relative_resistance[1], reference_resistance, reference_temperature)\n",
+    "\n",
+    "res = linregress(np.log(temperature_results), np.log(voltage_data))\n",
+    "print(res.slope)\n",
+    "print(res.stderr)"
    ]
   }
  ],
